# c-

./: key-concepts.md
lab1/: hello.cpp
lab2-test driven development/RGBA/: CMakeLists.txt
lab2-test driven development/RGBA/include/: rgba.h
lab2-test driven development/RGBA/tests/: RGBATests.cpp
lectures/l-2/: a.out  structs.cpp  structs.h
lectures/l-3/: functionstack.cpp  malloc.cpp  pointers.cpp  swap.cpp
lectures/l-4/: MusicTests.cpp  a.out  color.h  colorclass.cpp  music.h  musicclass.cpp
